--- a/Portfolio/Pullr.html
+++ b/Portfolio/Pullr.html
@@ -29,6 +29,7 @@
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/portfolio_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Portfolio</title>
 </head>
 
@@ -39,8 +40,6 @@
         <!--Header-->
 
         <header class="header" id="myHeader">
-
-            <!-- <a href="#" id="scroll_top11" title="Наверх"></a> -->
 
             <!--Right-Sided Navigation-->
 
@@ -101,9 +100,11 @@
 
         <!-- Block_1 -->
 
+        <!-- Block_1 -->
+
         <div class="block_1">
-            <img src='../img/portfolio_1.jpg' alt="Pullr" style="width:50%;">
-            <div class="block_1_text">
+            <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_1.jpg' alt="Pullr">
+            <div class="block_1_text animate__animated animate__fadeInUp">
                 <h5 align="center">PULLR</h5> <br>
                 <p align="justify">Agency pulls significant tech startups (blockchain, crypto, fintech, AI, IoT etc.)
                     and distinguished Venture Capital firms together. PULLR helps startups enhance investment cases,
@@ -177,7 +178,7 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
                         <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
@@ -193,7 +194,7 @@
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 647-676-3661 </p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
