--- a/Portfolio/Vivis_organics.html
+++ b/Portfolio/Vivis_organics.html
@@ -29,6 +29,7 @@
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/portfolio_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Portfolio</title>
 </head>
 
@@ -39,8 +40,6 @@
         <!--Header-->
 
         <header class="header" id="myHeader">
-
-            <!-- <a href="#" id="scroll_top11" title="Наверх"></a> -->
 
             <!--Right-Sided Navigation-->
 
@@ -102,14 +101,13 @@
         <!-- Block_1 -->
 
         <div class="block_1">
-            <img src='../img/portfolio_4.jpg' alt="Vivis Organics" style="width:50%;">
-            <div class="block_1_text">
+            <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_4.jpg' alt="Vivis Organics">
+            <div class="block_1_text animate__animated animate__fadeInUp">
                 <h5 align="center">Vivi's Organics</h5> <br>
                 <p align="justify">Online store with user-friendly CMS, and popular payment systems. Sells organic
                     cosmetics for woman
                     (cream, moisturizers, etc). Website has responsive interface, looks good on all devices with
-                    different
-                    size of screen.</p>
+                    different size of screen.</p>
                 <p>Visit Website at : <a href='http://vivisorganic.com.tilda.ws/#rec179708850'
                         class="portfolioLink">Vivi's Organics</a></p>
                 <p>Technologies Used: CMS Tilda, PHP, HTML5, CSS3, JavaScript, MySQL, Less, Sass</p>
@@ -177,7 +175,7 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
                         <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
@@ -193,7 +191,7 @@
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 647-676-3661 </p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
