--- a/Services/Ecommerce.html
+++ b/Services/Ecommerce.html
@@ -28,19 +28,18 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
-    <link rel="stylesheet" href="../css/ecommerce_style.css">
-    <title>Ecommerce</title>
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>eCommerce</title>
 </head>
 
 <body>
     <div class="page">
 
 
-          <!--Header-->
+        <!--Header-->
 
-          <header class="header" id="myHeader">
-
-            <a href="#" id="scroll_top11" title="Наверх"></a>
+        <header class="header" id="myHeader">
 
             <!--Right-Sided Navigation-->
 
@@ -66,8 +65,8 @@
                 <li><a href="../Works.html">Works</a></li>
                 <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
                 <li class="phone_navbar">
-                    <span class="phone_highlight"> +1-111</span>
-                    <span>-111-1111 </span>
+                    <span class="phone_highlight"> +1-647</span>
+                    <span>-676-3661 </span>
                 </li>
             </ul>
             </nav>
@@ -77,7 +76,7 @@
         <div class="company_logo">
             <img src='../img/cloud-256x256.png' width=50px />
         </div>
-        <!-- <div class="company_name">BlackCloud</div> -->
+        <div class="company_name">iDigital Web Studio</div>
 
 
         <!-- Breadcrumbs -->
@@ -85,13 +84,15 @@
         <div class="breadcrumbs_container">
             <div class="breadcrumbs_row">
                 <h4 class="breadcrumbs_title">
-                    Ecommerce </h4>
+                    eCommerce </h4>
                 <ol class="breadcrumb">
                     <li class="first-item">
-                        <a href='../index.html'>Home</a></li>
+                        <a href='../index.html'>Home</a>
+                    </li>
                     <li class="second-item">
-                        <a href='../Services.html'>Our Services</a></li>
-                    <li class="last-item">Ecommerce</li>
+                        <a href='../Services.html'>Our Services</a>
+                    </li>
+                    <li class="last-item">eCommerce</li>
                 </ol>
             </div>
         </div>
@@ -100,28 +101,29 @@
         <!-- Block_1 -->
 
         <div class="block_1_row">
-            <div class="block_1_column_1">
-                <div class="block_1_header">
-                    <h6>Need a New Digital Strategy?</h6>
-                </div>
-                <div class="block_1_text">
-                    <span>
-                        You are just making your first steps in eCommerce or you want to get a small, but profitable online store - 
-                        iDigital Studio is your choice. We will derive your eCommerce to a completely new level of efficiency. 
-                        We work with most popular eCommerce platforms in the world or just create your personal multifunctional E-commerce project, 
-                        with perfect design and thoughtful automation on turnkey basis.
-                    </span>
-                    <br></br>
-                    <span>
-                        E-commerce is no longer seen as an option. It is a necessary tool for the development of a business 
-                        selling goods or services. While developing an online store, we will provide integration of all necessary 
-                        services: payment systems; CRM-systems; delivery; analytical software; contact forms and many more...
-                    </span>
-                </div>
-            </div>
+
             <div class="block_1_column_2">
                 <div class="block_1_image">
                     <img src='../img/img_315.jpg' width=100% />
+                </div>
+            </div>
+
+            <div class="block_1_column_1">
+                <div class="block_1_header">
+                    <h4> Need a New Digital Strategy? </h6>
+                </div>
+                <div class="block_1_text">
+                    <p> You are just making your first steps in eCommerce or you want to get a small, but profitable
+                        online store - iDigital Studio is your choice. We will derive your eCommerce to a completely
+                        new level of efficiency. We work with most popular eCommerce platforms in the world or just
+                        create your personal multifunctional eCommerce project, with perfect design and
+                        thoughtful automation on turnkey basis. </p>
+
+                    <p> eCommerce is no longer seen as an option. It is a necessary tool for the development of a
+                        business selling goods or services. While developing an online store, we will provide
+                        integration of all necessary services: payment systems; CRM-systems; delivery;
+                        analytical software; contact forms, etc. <span class="textHighlight"> Contact Us Today to Learn
+                            More. </span></p>
                 </div>
             </div>
         </div>
@@ -129,23 +131,22 @@
         <div class="block_1_row">
             <div class="block_1_column_3">
                 <div class="block_1_text">
-                    <span>
-                        To create an online store, we perform a detailed study of company needs, determining
-                        what should be achieved by its online representation. This is how we find the optimal solutions 
-                        targeted at a specific niche. Even on store design stage, best practices are ipmplemented to increase 
-                        the number of sales and requests from the site.
-                    </span>
-                    <br></br>
+                    <p> To create an online store, we perform a detailed study of company needs, determining
+                        what should be achieved by its online representation. This is how we find the optimal solutions
+                        targeted at a specific niche. Even on store design stage, best practices are ipmplemented to
+                        increasen the number of sales and requests from the site. </p>
+
                     <div class="list_1">
-                        <h6>Advantages of eCommerce:</h6>
+                        <h4 class="headerStyle"> Advantages of eCommerce: </h4>
                         <ul>
-                            <li> "Faster buying/selling procedure, as well as easy to find products." </li>
-                            <li> "Buying/selling 24/7." </li>
-                            <li> "More reach to customers, there is no theoretical geographic limitations." </li>
-                            <li> "Low operational costs and better quality of services." </li>
-                            <li> "No need of physical company set-ups." </li>
-                            <li> "Easy to start and manage a business." </li>
-                            <li> "Customers can easily select products from different providers without moving around physically." </li>
+                            <li> Faster buying/selling procedure, as well as easy to find products </li>
+                            <li> Buying/selling 24/7 </li>
+                            <li> More reach to customers, there is no theoretical geographic limitations </li>
+                            <li> Low operational costs and better quality of services </li>
+                            <li> No need of physical company set-ups </li>
+                            <li> Easy to start and manage a business </li>
+                            <li> Customers can easily select products from different providers without moving around
+                                physically </li>
                         </ul>
                     </div>
                 </div>
@@ -157,20 +158,36 @@
 
         <div class="slideshow-container">
 
+            <div class="reviewHeader">What People Say About Us</div>
+
             <div class="mySlides">
-                <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-                <p class="author">- John Keats</p>
+                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
+                    company.</q>
+                <p class="author">Thomas</p>
             </div>
 
             <div class="mySlides">
-                <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-                <p class="author">- Ernest Hemingway</p>
+                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
+                    experience to
+                    a whole new level that you simply can't teach. The feedback from my customers are just as
+                    astonished!
+                    Thank you again, I know I definitely made the right choice!</q>
+                <p class="author">Timothy Collier</p>
             </div>
 
             <div class="mySlides">
-                <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-                <p class="author">- Thomas A. Edison</p>
+                <q>Professional and efficient. They did an excellent work redesigning my website with very tight
+                    deadline.
+                    Individual customer approach and post sale service.</q>
+                <p class="author">Justin</p>
             </div>
+
+            <div class="mySlides">
+                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
+                    needs.</q>
+                <p class="author">Alison Fagin</p>
+            </div>
+
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -181,6 +198,7 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
         </div>
 
 
@@ -196,23 +214,23 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
-                        <p style="font-size: 14pt"> 2080 King St., Toronto,<br> Ontario, Canada</p>
+                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">example@example.com</a>
+                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 111 111 111 111 <br> Fax: 222 222 222 222</p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
