--- a/Services/Marketing.html
+++ b/Services/Marketing.html
@@ -28,7 +28,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
-    <link rel="stylesheet" href="../css/marketing_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Digital Marketing</title>
 </head>
 
@@ -36,11 +37,9 @@
     <div class="page">
 
 
-         <!--Header-->
+        <!--Header-->
 
-         <header class="header" id="myHeader">
-
-            <a href="#" id="scroll_top11" title="Наверх"></a>
+        <header class="header" id="myHeader">
 
             <!--Right-Sided Navigation-->
 
@@ -66,8 +65,8 @@
                 <li><a href="../Works.html">Works</a></li>
                 <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
                 <li class="phone_navbar">
-                    <span class="phone_highlight"> +1-111</span>
-                    <span>-111-1111 </span>
+                    <span class="phone_highlight"> +1-647</span>
+                    <span>-676-3661 </span>
                 </li>
             </ul>
             </nav>
@@ -77,7 +76,7 @@
         <div class="company_logo">
             <img src='../img/cloud-256x256.png' width=50px />
         </div>
-        <!-- <div class="company_name">iDigital Web Studio</div> -->
+        <div class="company_name">iDigital Web Studio</div>
 
 
         <!-- Breadcrumbs -->
@@ -85,72 +84,84 @@
         <div class="breadcrumbs_container">
             <div class="breadcrumbs_row">
                 <h4 class="breadcrumbs_title">
-                    Marketing </h4>
+                    Digital Marketing </h4>
                 <ol class="breadcrumb">
                     <li class="first-item">
-                        <a href='../index.html'>Home</a></li>
+                        <a href='../index.html'>Home</a>
+                    </li>
                     <li class="second-item">
-                        <a href='../Services.html'>Our Services</a></li>
+                        <a href='../Services.html'>Our Services</a>
+                    </li>
                     <li class="last-item">Digital Marketing</li>
                 </ol>
             </div>
         </div>
 
+
         <!-- Block_1 -->
         <div class="block_1_row">
-            <div class="block_1_column_1">
-                <div class="block_1_header">
-                    <h6>Outstand - is always a win-win strategy</h6>
-                </div>
-                <div class="block_1_text">
-                    <span>
-                        We offer Digital marketing solutions that generate a return on investment (ROI). 
-                        Starting with Search Engine Optimization (SEO), Search Engine Marketing (SEM) and website monitoring.
-                    </span>
-                    <br></br>
-                    <span>
-                        We will promote your brand and increase sales with complex approach, using all Internet marketing tools. 
-                        Context advertising, SMM, lead generation, retargeting, YouTube advertising and much more.
-                    </span>
-                </div>
-            </div>
+
             <div class="block_1_column_2">
                 <div class="block_1_image">
                     <img src='../img/img_312.jpg' width=100% />
                 </div>
             </div>
+
+            <div class="block_1_column_1">
+                <div class="block_1_header">
+                    <h4>Outstand - is Always a Win-Win Strategy</h4>
+                </div>
+                <div class="block_1_text">
+                    <p>
+                        We offer Digital marketing solutions that generate a return on investment (ROI).
+                        Starting with Search Engine Optimization (SEO), Search Engine Marketing (SEM) and website
+                        monitoring.
+                    </p>
+                    <p>
+                        We will promote your brand and increase sales with complex approach, using all Internet
+                        marketing tools.
+                        Context advertising, SMM, lead generation, retargeting, YouTube advertising and much more.
+                    </p>
+                    <p>
+                        Professional digital marketing services allows you to achieve real goals:
+                        systematical growth of business, increase your brand awareness, loyalty from target audience and
+                        most important - increase profits. You will learn how which channel works separately and in
+                        complex with others, and what advantages it brings to your business.
+                    </p>
+                </div>
+            </div>
+
         </div>
 
         <div class="block_1_row">
             <div class="block_1_column_3">
                 <div class="block_1_text">
-                    <span>
-                        Professional digital marketing services allows you to achieve real goals: 
-                        systematical growth of business, increase your brand awareness, loyalty from target audience and 
-                        most important - increase profits. You will learn how which channel works separately and in complex with others, and what advantages it brings to your business.
-                    </span>
-                    <br></br>
-                    <span>
-                        Complex digital marketing service for business involves use of all existing web channels to achieve 
-                        targeted traffic. This allows you to get maximum from seo, context ads, social media and other channels 
-                        as well as get rid of those you don't need in your business. If you want your website working for you and 
-                        bring maximum profit call us today. We will find best solutions for your business regarding your industry 
+
+                    <p>
+                        Complex digital marketing service for business involves use of all existing web channels to
+                        achieve
+                        targeted traffic. This allows you to get maximum from seo, context ads, social media and other
+                        channels
+                        as well as get rid of those you don't need in your business. If you want your website working
+                        for you and
+                        bring maximum profit call us today. We will find best solutions for your business regarding your
+                        industry
                         and business needs.
-                    </span>
+                    </p>
 
                     <div class="list_1">
-                        <h6>Our Digital Marketing Services</h6>
+                        <h4 class="headerStyle">Our Digital Marketing Services</h4>
                         <ul>
-                            <li> "Analytics" </li>
-                            <li> "Digital Promotion Strategy Development" </li>
-                            <li> "Reputation Management" </li>
-                            <li> "Lead Generation" </li>
-                            <li> "Context Advertising" </li>
-                            <li> "Social Media Marketing (SMM)" </li>
-                            <li> "Email Marketing" </li>
-                            <li> "Media Advertising" </li>
-                            <li> "Advertising materials" </li>
-                            <li> "Complex Digital Marketing" </li>
+                            <li> Analytics </li>
+                            <li> Digital Promotion Strategy Development </li>
+                            <li> Reputation Management </li>
+                            <li> Lead Generation </li>
+                            <li> Context Advertising </li>
+                            <li> Social Media Marketing (SMM) </li>
+                            <li> Email Marketing </li>
+                            <li> Media Advertising </li>
+                            <li> Advertising materials </li>
+                            <li> Complex Digital Marketing </li>
                         </ul>
                     </div>
                 </div>
@@ -162,20 +173,36 @@
 
         <div class="slideshow-container">
 
+            <div class="reviewHeader">What People Say About Us</div>
+
             <div class="mySlides">
-                <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-                <p class="author">- John Keats</p>
+                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
+                    company.</q>
+                <p class="author">Thomas</p>
             </div>
 
             <div class="mySlides">
-                <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-                <p class="author">- Ernest Hemingway</p>
+                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
+                    experience to
+                    a whole new level that you simply can't teach. The feedback from my customers are just as
+                    astonished!
+                    Thank you again, I know I definitely made the right choice!</q>
+                <p class="author">Timothy Collier</p>
             </div>
 
             <div class="mySlides">
-                <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-                <p class="author">- Thomas A. Edison</p>
+                <q>Professional and efficient. They did an excellent work redesigning my website with very tight
+                    deadline.
+                    Individual customer approach and post sale service.</q>
+                <p class="author">Justin</p>
             </div>
+
+            <div class="mySlides">
+                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
+                    needs.</q>
+                <p class="author">Alison Fagin</p>
+            </div>
+
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -186,6 +213,7 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
         </div>
 
 
@@ -193,31 +221,31 @@
         <div class="topNubex" id="topNubex"><i class="fa fa-angle-double-up fa-2x"></i></div>
 
 
-         <!-- Footer -->
+        <!-- Footer -->
 
-         <footer>
+        <footer>
             <div class="footer">
                 <div class="footerRow">
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
-                        <p style="font-size: 14pt"> 2080 King St., Toronto,<br> Ontario, Canada</p>
+                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">example@example.com</a>
+                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 111 111 111 111 <br> Fax: 222 222 222 222</p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
