--- a/Services/SEO_optimization.html
+++ b/Services/SEO_optimization.html
@@ -28,7 +28,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
-    <link rel="stylesheet" href="../css/seo_optimization_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>SEO Optimization</title>
 </head>
 
@@ -36,9 +37,9 @@
     <div class="page">
 
 
-          <!--Header-->
+        <!--Header-->
 
-          <header class="header" id="myHeader">
+        <header class="header" id="myHeader">
 
             <a href="#" id="scroll_top11" title="Наверх"></a>
 
@@ -66,8 +67,8 @@
                 <li><a href="../Works.html">Works</a></li>
                 <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
                 <li class="phone_navbar">
-                    <span class="phone_highlight"> +1-111</span>
-                    <span>-111-1111 </span>
+                    <span class="phone_highlight"> +1-647</span>
+                    <span>-676-3661 </span>
                 </li>
             </ul>
             </nav>
@@ -77,7 +78,7 @@
         <div class="company_logo">
             <img src='../img/cloud-256x256.png' width=50px />
         </div>
-        <!-- <div class="company_name">BlackCloud</div> -->
+        <div class="company_name">iDigital Web Studio</div>
 
 
 
@@ -89,9 +90,11 @@
                     SEO Optimization </h4>
                 <ol class="breadcrumb">
                     <li class="first-item">
-                        <a href='../index.html'>Home</a></li>
+                        <a href='../index.html'>Home</a>
+                    </li>
                     <li class="second-item">
-                        <a href='../Services.html'>Our Services</a></li>
+                        <a href='../Services.html'>Our Services</a>
+                    </li>
                     <li class="last-item">SEO Optimization</li>
                 </ol>
             </div>
@@ -102,54 +105,64 @@
         <!-- Block_1 -->
 
         <div class="block_1_row">
-            <div class="block_1_column_1">
-                <div class="block_1_header">
-                    <h6>We Will Bring Your Website to the Top of Search Results.</h6>
-                </div>
-                <div class="block_1_text">
-                    <span>
-                        SEO Optimization - is bringing your website to the first page of search results in different search engines 
-                        like Google or Yahoo. According to the latest research even if you disable context advertising from any top-site,
-                        it will save up to 48% of traffic. Website will attract visitors automatically. Search engine optimization has 
-                        a long-lasting effect - your website will be in the top of the search results from six month to several years. 
-                        
-                    </span>
-                    <br></br>
-                    <span>
-                        We will do SEO-Optimization for your website and bring it all the way up to the top in search engines 
-                        through all Internet or only in desired cities. We fill it with right, useful for visitors content, 
-                        improve it's usability taking into account requirements of search algorithms. 
-                        Website will will get new visitors by itself. 
-                </div>
-            </div>
+
             <div class="block_1_column_2">
                 <div class="block_1_image">
                     <img src='../img/img_311.jpg' width=100% />
                 </div>
             </div>
+
+            <div class="block_1_column_1">
+                <div class="block_1_header">
+                    <h4>We Will Bring Your Website to the Top of Search Results</h4>
+                </div>
+                <div class="block_1_text">
+                    <p>
+                        SEO Optimization - is bringing your website to the first page of search results in different
+                        search engines
+                        like Google or Yahoo. According to the latest research even if you disable context advertising
+                        from any top-site,
+                        it will save up to 48% of traffic. Website will attract visitors automatically. Search engine
+                        optimization has
+                        a long-lasting effect - your website will be in the top of the search results from six month to
+                        several years.
+
+                    </p>
+                    <p>
+                        We will do SEO - Optimization for your website and bring it all the way up to the top in search
+                        engines
+                        through all Internet or only in desired cities. We fill it with right, useful for visitors
+                        content,
+                        improve it's usability taking into account requirements of search algorithms.
+                        Website will will get new visitors by itself. </p>
+                </div>
+            </div>
+
         </div>
 
         <div class="block_1_row">
             <div class="block_1_column_3">
                 <div class="block_1_text">
-                    <span>
-                        SEO - it's a long term asset. It will take from couple of weeks up to three month of work to reach the top. 
-                        You cannot quickly break through your competitors which have been there for years. And you can't rush search algorithms - 
-                        Google updates website positions once a week. But the result worth it: your website will stay in the top of the search results 
-                        for months or even years! We will optimize your website for new search algorithms in order to maintain top-positions. 
-                    </span>
-                    <br></br>
-
+                    <p>
+                        SEO - it's a long term asset. It will take from couple of weeks up to three month of work to
+                        reach the top.
+                        You cannot quickly break through your competitors which have been there for years. And you can't
+                        rush search algorithms -
+                        Google updates website positions once a week. But the result worth it: your website will stay in
+                        the top of the search results
+                        for months or even years! We will optimize your website for new search algorithms in order to
+                        maintain top-positions.
+                    </p>
                     <div class="list_1">
-                        <h6>How we do this:</h6>
+                        <h4 class="headerStyle">How We Do This:</h4>
                         <ul>
-                            <li> "Website audit" </li>
-                            <li> "Compose the semantic core" </li>
-                            <li> "Developing promotion strategy that best suites your type of business" </li>
-                            <li> "Write and publish SEO-texts" </li>
-                            <li> "Add site-reference and "reputation" to te website" </li>
-                            <li> "Perform internal/external website optimization" </li>
-                            <li> "Provide a monthly report" </li>
+                            <li> Website audit </li>
+                            <li> Compose the semantic core </li>
+                            <li> Developing promotion strategy that best suites your type of business </li>
+                            <li> Write and publish SEO-texts </li>
+                            <li> Add site-reference and "reputation" to te website </li>
+                            <li> Perform internal/external website optimization </li>
+                            <li> Provide monthly report </li>
 
                         </ul>
                     </div>
@@ -158,24 +171,41 @@
         </div>
 
 
+
         <!-- Block_2 -->
 
         <div class="slideshow-container">
 
+            <div class="reviewHeader">What People Say About Us</div>
+
             <div class="mySlides">
-                <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-                <p class="author">- John Keats</p>
+                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
+                    company.</q>
+                <p class="author">Thomas</p>
             </div>
 
             <div class="mySlides">
-                <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-                <p class="author">- Ernest Hemingway</p>
+                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
+                    experience to
+                    a whole new level that you simply can't teach. The feedback from my customers are just as
+                    astonished!
+                    Thank you again, I know I definitely made the right choice!</q>
+                <p class="author">Timothy Collier</p>
             </div>
 
             <div class="mySlides">
-                <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-                <p class="author">- Thomas A. Edison</p>
+                <q>Professional and efficient. They did an excellent work redesigning my website with very tight
+                    deadline.
+                    Individual customer approach and post sale service.</q>
+                <p class="author">Justin</p>
             </div>
+
+            <div class="mySlides">
+                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
+                    needs.</q>
+                <p class="author">Alison Fagin</p>
+            </div>
+
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -186,6 +216,7 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
         </div>
 
 
@@ -201,23 +232,23 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
-                        <p style="font-size: 14pt"> 2080 King St., Toronto,<br> Ontario, Canada</p>
+                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">example@example.com</a>
+                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 111 111 111 111 <br> Fax: 222 222 222 222</p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
