--- a/Works.html
+++ b/Works.html
@@ -29,6 +29,7 @@
         rel="stylesheet">
     <link rel="icon" type="image/png" href="img/cloud-256x256.png">
     <link rel="stylesheet" href="css/works_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Works</title>
 </head>
 
@@ -73,7 +74,7 @@
         <div class="company_logo">
             <img src='../img/cloud-256x256.png' width=50px />
         </div>
-        <!-- <div class="company_name">iDigital Web Studio</div> -->
+        <div class="company_name">iDigital Web Studio</div>
 
         <!-- Breadcrumbs -->
 
@@ -105,16 +106,16 @@
             <div class="block_1_row">
                 <div class="column design">
                     <div class="content">
-                        <a href="Portfolio/Pullr.html"><img mg src='img/portfolio_1.jpg' class="overlay"
-                                                            alt="Pullr" style="width:100%"></a>
+                        <a href="Portfolio/Pullr.html"><img mg src='img/portfolio_1.jpg' class="overlay" alt="Pullr"
+                                style="width:100%"></a>
                         <div><a href="Portfolio/Pullr.html">PULLR</a></div>
                         <p>Communication agency for tech & digital startups and Venture Capital companies</p>
                     </div>
                 </div>
                 <div class="column design">
                     <div class="content">
-                        <a href="Portfolio/Lost_Shirt.html"><img mg src='img/portfolio_2.jpg' class="overlay" alt="Loft School"
-                                                                 style="width:100%"></a>
+                        <a href="Portfolio/Lost_Shirt.html"><img mg src='img/portfolio_2.jpg' class="overlay"
+                                alt="Loft School" style="width:100%"></a>
                         <div><a href="Portfolio/Lost_Shirt.html">Lost Shirt</a></div>
                         <p>Online Store with creative bright design, selling t-shirts with funny prints (all sizes)</p>
                     </div>
@@ -122,32 +123,32 @@
                 <div class="column design">
                     <div class="content">
                         <a href="Portfolio/Instatech.html"><img mg src='img/portfolio_9.jpg' class="overlay"
-                                                                alt="Instatech" style="width:100%"></a>
+                                alt="Instatech" style="width:100%"></a>
                         <div><a href="Portfolio/Instatech.html">Instatech</a></div>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut …</p>
+                        <p>Consulting services and solutions in AI • BLOCKCHAIN • CRYPTO • IOT • VR • AR • MOBILE</p>
                     </div>
                 </div>
 
                 <div class="column branding">
                     <div class="content">
                         <a href="Portfolio/Vivis_organics.html"><img mg src='img/Portfolio_4.jpg' class="overlay"
-                                                                     alt="Vivi's Organics" style="width:100%"></a>
+                                alt="Vivi's Organics" style="width:100%"></a>
                         <div><a href="Portfolio/Vivis_organics.html">Vivi's Organics</a></div>
                         <p>Online Store selling organic cosmetics products for woman for all types of skin</p>
                     </div>
                 </div>
                 <div class="column advertisement">
                     <div class="content">
-                        <a href="Portfolio/Telebot.html"><img mg src='img/portfolio_5.jpg' class="overlay"
-                                                              alt="TeleBot" style="width:100%"></a>
+                        <a href="Portfolio/Telebot.html"><img mg src='img/portfolio_5.jpg' class="overlay" alt="TeleBot"
+                                style="width:100%"></a>
                         <div><a href="Portfolio/Telebot.html">TeleBot</a></div>
                         <p>COVID-19 Telegram Bot - shows COVID-19 statistics all over the world</p>
                     </div>
                 </div>
                 <div class="column branding">
                     <div class="content">
-                        <a href="Portfolio/Finmap.html"><img mg src='img/portfolio_6.jpg' class="overlay"
-                                                             alt="FinMap" style="width:100%"></a>
+                        <a href="Portfolio/Finmap.html"><img mg src='img/portfolio_6.jpg' class="overlay" alt="FinMap"
+                                style="width:100%"></a>
                         <div><a href="Portfolio/Finmap.html">FinMap</a></div>
                         <p>Online service for comprehensive and convenient financial management</p>
                     </div>
@@ -155,26 +156,27 @@
 
                 <div class="column advertisement">
                     <div class="content">
-                        <a href="Portfolio/Bookstore.html"><img mg src='img/portfolio_7.jpg' alt="Adventures Of Noah" class="overlay"
-                                                                style="width:100%"></a>
+                        <a href="Portfolio/Bookstore.html"><img mg src='img/portfolio_7.jpg' alt="Adventures Of Noah"
+                                class="overlay" style="width:100%"></a>
                         <div><a href="Portfolio/Bookstore.html">Adventures Of Noah</a></div>
-                        <p>OOnline Book Store with integrated most popular payment systems and intuitive CRM system</p>
+                        <p>Online Book Store with integrated most popular payment systems and intuitive CRM system</p>
                     </div>
                 </div>
                 <div class="column advertisement">
                     <div class="content">
-                        <a href="Portfolio/Enlight.html"><img mg src='img/portfolio_8.jpg' alt="Enlight Agency" class="overlay"
-                                                              style="width:100%"></a>
+                        <a href="Portfolio/Enlight.html"><img mg src='img/portfolio_8.jpg' alt="Enlight Agency"
+                                class="overlay" style="width:100%"></a>
                         <div><a href="Portfolio/Enlight.html">Enlight Agency</a></div>
                         <p>Marketing & PR Communication Agency for tech startups, VC and well-established companies.</p>
                     </div>
                 </div>
                 <div class="column advertisement">
                     <div class="content">
-                        <a href="Portfolio/Activebox.html"><img mg src='img/portfolio_3.jpg' class="overlay" alt="ActiveBox"
-                                                                style="width:100%"></a>
+                        <a href="Portfolio/Activebox.html"><img mg src='img/portfolio_3.jpg' class="overlay"
+                                alt="ActiveBox" style="width:100%"></a>
                         <div><a href="Portfolio/Activebox.html">ActiveBox</a></div>
-                        <p>Universal template for multipurpose use. Template is adapted for all types of devices: mobile, tablet, desktop</p>
+                        <p>Universal template for multipurpose use. Template is adapted for all popular types of devices
+                        </p>
                     </div>
                 </div>
                 <!-- END GRID -->
@@ -196,23 +198,23 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='img/icons/dark_icon_1.png'>
                         </div>
-                        <p style="font-size: 14pt"> 2080 King St., Toronto,<br> Ontario, Canada</p>
+                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">example@example.com</a>
+                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 111 111 111 111 <br> Fax: 222 222 222 222</p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661
                     </div>
                     <div class="footerColumn">
                     </div>
@@ -220,7 +222,7 @@
         </footer>
     </div>
 
-    
+
     <!--===============================================================================================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--===============================================================================================-->
