--- a/Portfolio/Enlight.html
+++ b/Portfolio/Enlight.html
@@ -29,6 +29,7 @@
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/portfolio_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Portfolio</title>
 </head>
 
@@ -100,16 +101,16 @@
         <!-- Block_1 -->
 
         <div class="block_1">
-            <img src='../img/portfolio_8.jpg' alt="Enlight Agency" style="width:50%;">
-            <div class="block_1_text">
+            <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_8.jpg'
+                alt="Enlight Agency">
+            <div class="block_1_text animate__animated animate__fadeInUp">
                 <h5 align="center">Enlight Agency</h5> <br>
                 <p align="justify">Marketing agency, cutting-edge communications for tech startups,
                     well-established & VC companies.</p>
                 <p align="justify">Either you personal entrepreneur, venture startup, or your company needs new approach
                     to the
                     business. Agency builds brands, raise profiles, makes new businesses attractive to investors, and
-                    helps
-                    them raise money.</p>
+                    helps them raise money.</p>
                 <p>Visit Website at : <a href='http://project958422.tilda.ws/' class="portfolioLink">Enlight</a></p>
                 <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL</p>
             </div>
@@ -176,7 +177,7 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
                         <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
@@ -192,7 +193,7 @@
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 647-676-3661 </p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
