--- a/Portfolio/Instatech.html
+++ b/Portfolio/Instatech.html
@@ -29,6 +29,7 @@
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
     <link rel="stylesheet" href="../css/portfolio_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Portfolio</title>
 </head>
 
@@ -36,11 +37,9 @@
     <div class="page">
 
 
-          <!--Header-->
+        <!--Header-->
 
-          <header class="header" id="myHeader">
-
-            <!-- <a href="#" id="scroll_top11" title="Наверх"></a> -->
+        <header class="header" id="myHeader">
 
             <!--Right-Sided Navigation-->
 
@@ -88,9 +87,11 @@
                     Portfolio </h4>
                 <ol class="breadcrumb">
                     <li class="first-item">
-                        <a href='../index.html'>Home</a></li>
+                        <a href='../index.html'>Home</a>
+                    </li>
                     <li class="second-item">
-                        <a href='../Works.html'>Works</a></li>
+                        <a href='../Works.html'>Works</a>
+                    </li>
                     <li class="last-item">Instatech</li>
                 </ol>
             </div>
@@ -100,10 +101,11 @@
         <!-- Block_1 -->
 
         <div class="block_1">
-            <img src='../img/portfolio_9.jpg' alt="Instatech" style="width:50%;">
-            <div class="block_1_text">
+            <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_9.jpg' alt="Instatech">
+            <div class="block_1_text animate__animated animate__fadeInUp">
                 <h5 align="center">Instatech</h5> <br>
-                <p align="justify">Lorem ipsum bla bla bla</p>
+                <p align="justify">Consulting services and solutions in AI • BLOCKCHAIN • CRYPTO • IOT • VR • AR •
+                    MOBILE</p>
                 <p>Visit Website at : <a href='https://instatec.com/' class="portfolioLink">Instatech</a></p>
                 <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
             </div>
@@ -117,25 +119,30 @@
             <div class="reviewHeader">What People Say About Us</div>
 
             <div class="mySlides">
-                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my company.</q>
+                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
+                    company.</q>
                 <p class="author">Thomas</p>
             </div>
 
             <div class="mySlides">
-                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal experience to 
-                    a whole new level that you simply can't teach. The feedback from my customers are just as astonished! 
+                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
+                    experience to
+                    a whole new level that you simply can't teach. The feedback from my customers are just as
+                    astonished!
                     Thank you again, I know I definitely made the right choice!</q>
                 <p class="author">Timothy Collier</p>
             </div>
 
             <div class="mySlides">
-                <q>Professional and efficient. They did an excellent work redesigning my website with very tight deadline. 
+                <q>Professional and efficient. They did an excellent work redesigning my website with very tight
+                    deadline.
                     Individual customer approach and post sale service.</q>
                 <p class="author">Justin</p>
             </div>
 
             <div class="mySlides">
-                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design needs.</q>
+                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
+                    needs.</q>
                 <p class="author">Alison Fagin</p>
             </div>
 
@@ -165,7 +172,7 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
                         <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
@@ -181,7 +188,7 @@
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 647-676-3661 </p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
