--- a/Services.html
+++ b/Services.html
@@ -27,7 +27,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!--===============================================================================================-->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Services</title>
 </head>
 
@@ -63,8 +63,8 @@
                 <span><a href="./Works.html">Works</a></span>
                 <span><a href='./ContactFrom_v6/Contacts.html' target="_blank">Contact</a></span>
                 <span class="phone_navbar">
-                    <span class="phone_highlight"> +1-111</span>
-                    <span>-111-1111 </span>
+                    <span class="phone_highlight"> +1-647</span>
+                    <span>-676-3661 </span>
                 </span>
             </span>
             </nav>
@@ -74,7 +74,7 @@
         <div class="company_logo">
             <img src='../img/cloud-256x256.png' width=50px />
         </div>
-        <!-- <div class="company_name">iDigital Web Studio</div> -->
+        <div class="company_name">iDigital Web Studio</div>
 
 
         <!-- Breadcrumbs -->
@@ -105,12 +105,12 @@
                     <div class="box-wrap">
                         <div class="box_header">
                             <div><a href='Services/Marketing.html'
-                                    class="mybutton__text mybutton mybutton--animate-click-three">Marketing</a></div>
+                                    class="mybutton__text mybutton mybutton--animate-click-three">Digital Marketing</a></div>
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> We analyze the field and  your competitors, create strong marketing programs using strategic marketing tactics that have been proven to work </p>
-                            </br>
+                            <p> We analyze the field and  your competitors, create strong marketing programs using strategic 
+                                marketing tactics that have been proven to work </p></br>
                         </div>
                     </div>
 
@@ -127,8 +127,8 @@
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> On a turnkey basis we develop: online stores, landing pages, business card websites, corporate websites, portals, and individual solutions of any complexity </p>
-                            </br>
+                            <p> On a turnkey basis we develop: online stores, landing pages, business card websites, 
+                                corporate websites, portals, and individual solutions of any complexity </p></br>
                         </div>
                     </div>
 
@@ -145,7 +145,8 @@
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> Correct layout of interface elements and user-friendly intuitive design are vital. We will create unique UI/UX design adjusted for your business needs</p>
+                            <p> Correct layout of interface elements and user-friendly intuitive design are vital. 
+                                We will create unique UI/UX design adjusted for your business needs</p>
                             </br>
                         </div>
                     </div>
@@ -163,7 +164,8 @@
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> Optimizing our web designs to rank on the first page of Google is our specialty. We will secure new leads for your business for a long-term period </p>
+                            <p> Optimizing our web designs to rank on the first page of Google is our specialty. 
+                                We will secure new leads for your business for a long-term period </p>
                             </br>
                         </div>
                     </div>
@@ -176,12 +178,12 @@
                     <div class="box-wrap">
                         <div class="box_header">
                             <div><a href='Services/Ecommerce.html'
-                                    class="mybutton__text mybutton mybutton--animate-click-three">Ecommerce</a></div>
+                                    class="mybutton__text mybutton mybutton--animate-click-three">eCommerce</a></div>
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> We analyze your field, develop the structure and implement a unique design for your project following your requirements until you are completely satisfied </p>
-                            </br>
+                            <p> We develop the structure and implement a unique design for your project following your requirements until 
+                                you are completely satisfied </p></br>
                         </div>
                     </div>
                 </div>
@@ -197,8 +199,8 @@
                         </div>
                         <div class="box_text">
                             <br>
-                            <p> Logos of any complexity that will make even the most demanding client happy. We also create banners, slogans, promotional materials, etc... </p>
-                            </br>
+                            <p> Logos of any complexity that will make even the most demanding client happy. 
+                                We also create banners, slogans, promotional materials, etc... </p></br>
                         </div>
                     </div>
                 </div>
@@ -218,23 +220,23 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='img/icons/dark_icon_1.png'>
                         </div>
-                        <p style="font-size: 14pt"> 2080 King St., Toronto,<br> Ontario, Canada</p>
+                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">example@example.com</a>
+                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 111 111 111 111 <br> Fax: 222 222 222 222</p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661
                     </div>
                     <div class="footerColumn">
                     </div>
