--- a/Services/Branding.html
+++ b/Services/Branding.html
@@ -28,7 +28,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
-    <link rel="stylesheet" href="../css/branding_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Branding</title>
 </head>
 
@@ -36,11 +37,9 @@
     <div class="page">
 
 
-          <!--Header-->
+        <!--Header-->
 
-          <header class="header" id="myHeader">
-
-            <a href="#" id="scroll_top11" title="Наверх"></a>
+        <header class="header" id="myHeader">
 
             <!--Right-Sided Navigation-->
 
@@ -66,8 +65,8 @@
                 <li><a href="../Works.html">Works</a></li>
                 <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
                 <li class="phone_navbar">
-                    <span class="phone_highlight"> +1-111</span>
-                    <span>-111-1111 </span>
+                    <span class="phone_highlight"> +1-647</span>
+                    <span>-676-3661 </span>
                 </li>
             </ul>
             </nav>
@@ -77,7 +76,7 @@
         <div class="company_logo">
             <img src='../img/cloud-256x256.png' width=50px />
         </div>
-        <!-- <div class="company_name">BlackCloud</div> -->
+        <div class="company_name">iDigital Web Studio</div>
 
 
         <!-- Breadcrumbs -->
@@ -88,9 +87,11 @@
                     Branding </h4>
                 <ol class="breadcrumb">
                     <li class="first-item">
-                        <a href='../index.html'>Home</a></li>
+                        <a href='../index.html'>Home</a>
+                    </li>
                     <li class="second-item">
-                        <a href='../Services.html'>Our Services</a></li>
+                        <a href='../Services.html'>Our Services</a>
+                    </li>
                     <li class="last-item">Branding</li>
                 </ol>
             </div>
@@ -100,27 +101,28 @@
         <!-- Block_1 -->
 
         <div class="block_1_row">
-            <div class="block_1_column_1">
-                <div class="block_1_header">
-                    <h6>Need a Fresh Way to Grab Attention of Your Customers or Find New Ones?</h6>
-                </div>
-                <div class="block_1_text">
-                    <span>
-                        Branding is fundamental for every company, no matter what its field might be. 
-                        It could be products or services. Branding is equally important and it needs to run smoothly, at all costs. 
-                        Right branding strategy can not only grow your company’s profits, but also help your business evolve and 
-                        even grow into new markets.
-                    </span>
-                    <br></br>
-                    <span>
-                        We provide a full range of branding development services - from naming, 
-                        generating brand strategy, creating a logo and brand identity to preparing promotional materials.
-                    </span>
-                </div>
-            </div>
+
             <div class="block_1_column_2">
                 <div class="block_1_image">
                     <img src='../img/img_314.jpg' width=100% />
+                </div>
+            </div>
+
+            <div class="block_1_column_1">
+                <div class="block_1_header">
+                    <h4> Need a Fresh Way to Grab Attention of Your Customers or Find New Ones? </h4>
+                </div>
+                <div class="block_1_text">
+                    <p> Branding is fundamental for every company, no matter what its field might be.
+                        It could be products or services. Branding is equally important and it needs to run smoothly, at
+                        all costs.
+                        Right branding strategy can not only grow your company’s profits, but also help your business
+                        evolve and even grow into new markets. </p>
+
+                    <p> Using latest methods of design thinking, together with the client, we form an integral brand
+                        platform that allows the company to reach a new level of development, clearly aware of its
+                        competitive advantages and values. <span class="textHighlight"> Contact Us Today to Learn More.
+                        </span> </p>
                 </div>
             </div>
         </div>
@@ -128,19 +130,28 @@
         <div class="block_1_row">
             <div class="block_1_column_3">
                 <div class="block_1_text">
-                    <span>
-                        Using latest methods of design thinking, together with the client, we form an integral brand platform that 
-                        allows the company to reach a new level of development, clearly aware of its competitive advantages and values.
-                    </span>
-                    <br></br>
-                    <span>
-                        It is important to understand the concept of a brand in order to understand what branding exactly is. 
-                        A brand is the outlook or image of a product or service that consumers connect with by identifying the logo, 
-                        slogan, design, or name of the company. Branding is the process to market that outlook or image of a product 
-                        or service so that it can easily be differentiated in a competitive market. The process is about creating a 
-                        unique image for a product in consumers’ mind. By creating a brand, you market a promise that explains what 
-                        your customers should expect from your products and services.
-                    </span>
+
+                    <p> It is important to understand the concept of a brand in order to understand what branding
+                        exactly is. A brand is the "image" or reputation of the product or service that customer
+                        familiar
+                        with by identifying the logo, slogan, design, or name of the company. Branding is the
+                        process to market that "image" of a product or service so that it can be easily
+                        recognized in a competitive market. The process is about creating a
+                        unique image for a product in consumer’s mind. By creating a brand, you market a
+                        promise that explains what your customers should expect from your products and services. </p>
+
+                    <div class="list_1">
+                        <h4 class="headerStyle"> We Provide Full Range of Branding Services: </h4>
+                        <ul>
+                            <li> Logo design </li>
+                            <li> Brand messaging </li>
+                            <li> Brand positioning </li>
+                            <li> Brand voice </li>
+                            <li> Style guide </li>
+                            <li> Social media branding </li>
+                            <li> Promotional marketing materials </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -150,20 +161,36 @@
 
         <div class="slideshow-container">
 
+            <div class="reviewHeader">What People Say About Us</div>
+
             <div class="mySlides">
-                <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-                <p class="author">- John Keats</p>
+                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
+                    company.</q>
+                <p class="author">Thomas</p>
             </div>
 
             <div class="mySlides">
-                <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-                <p class="author">- Ernest Hemingway</p>
+                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
+                    experience to
+                    a whole new level that you simply can't teach. The feedback from my customers are just as
+                    astonished!
+                    Thank you again, I know I definitely made the right choice!</q>
+                <p class="author">Timothy Collier</p>
             </div>
 
             <div class="mySlides">
-                <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-                <p class="author">- Thomas A. Edison</p>
+                <q>Professional and efficient. They did an excellent work redesigning my website with very tight
+                    deadline.
+                    Individual customer approach and post sale service.</q>
+                <p class="author">Justin</p>
             </div>
+
+            <div class="mySlides">
+                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
+                    needs.</q>
+                <p class="author">Alison Fagin</p>
+            </div>
+
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -174,6 +201,7 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
         </div>
 
 
@@ -183,29 +211,31 @@
 
         <!-- Footer -->
 
+        <!-- Footer -->
+
         <footer>
             <div class="footer">
                 <div class="footerRow">
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
-                        <p style="font-size: 14pt"> 2080 King St., Toronto,<br> Ontario, Canada</p>
+                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">example@example.com</a>
+                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 111 111 111 111 <br> Fax: 222 222 222 222</p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
