--- a/Services/Development.html
+++ b/Services/Development.html
@@ -28,7 +28,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
-    <link rel="stylesheet" href="../css/development_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Development</title>
 </head>
 
@@ -36,11 +37,9 @@
     <div class="page">
 
 
-          <!--Header-->
+        <!--Header-->
 
-          <header class="header" id="myHeader">
-
-            <a href="#" id="scroll_top11" title="Наверх"></a>
+        <header class="header" id="myHeader">
 
             <!--Right-Sided Navigation-->
 
@@ -77,7 +76,7 @@
         <div class="company_logo">
             <img src='../img/cloud-256x256.png' width=50px />
         </div>
-        <!-- <div class="company_name">BlackCloud</div> -->
+        <div class="company_name">iDigital Web Studio</div>
 
 
         <!-- Breadcrumbs -->
@@ -85,13 +84,15 @@
         <div class="breadcrumbs_container">
             <div class="breadcrumbs_row">
                 <h4 class="breadcrumbs_title">
-                    Development </h4>
+                    Web Development </h4>
                 <ol class="breadcrumb">
                     <li class="first-item">
-                        <a href='../index.html'>Home</a></li>
+                        <a href='../index.html'>Home</a>
+                    </li>
                     <li class="second-item">
-                        <a href='../Services.html'>Our Services</a></li>
-                    <li class="last-item">Development</li>
+                        <a href='../Services.html'>Our Services</a>
+                    </li>
+                    <li class="last-item">Web Development</li>
                 </ol>
             </div>
         </div>
@@ -100,61 +101,56 @@
         <!-- Block_1 -->
 
         <div class="block_1_row">
-            <div class="block_1_column_1">
-                <div class="block_1_header">
-                    <h6>Make Website your Digital Asset</h6>
-                </div>
-                <div class="block_1_text">
-                    <span>
-                        You have a vision on how the ideal website should look like? 
-                        Just share your thoughts with us and we'll make them real!
-                    </span>
-                    <br></br>
-                    <span>
-                        Website development – is an investment in your own business, in creating a valuable digital asset. 
-                        Such asset increases capitalization of your business. It often becomes the main intangible asset of the company.
-                        We offer services different level of complexity regardless your business needs. 
-                        Either you are personal entrepreneur  or you operate big international corporation - we can always find a 
-                        solution that suits your needs best. 
-                    </span>
-                </div>
-            </div>
+
             <div class="block_1_column_2">
                 <div class="block_1_image">
                     <img src='../img/img_310.jpg' width=100% />
                 </div>
             </div>
+
+            <div class="block_1_column_1">
+                <div class="block_1_header">
+                    <h4> Make Website Your Digital Asset </h4>
+                </div>
+                <div class="block_1_text">
+                    <p> You have a vision on how the ideal website should look like?
+                        Just share your thoughts with us and we'll make them real! </p>
+                    <p> Website development – is an investment in your own business, in creating a valuable digital
+                        asset. Such asset increases capitalization of your business. It often becomes the main
+                        intangible asset
+                        of the company. We offer services different level of complexity regardless your business needs.
+                        Either you are personal entrepreneur or you operate big international corporation - we can
+                        always find a solution that suits your needs best. </p>
+                    <p> From turnkey basis to renovation of already existing website we use latest web developing tools
+                        and technologies to make sure you will get fast, reliable, responsive website optimized
+                        for search engines. </p>
+                </div>
+            </div>
+
         </div>
 
         <div class="block_1_row">
             <div class="block_1_column_3">
                 <div class="block_1_text">
-                    <span>
-                        From turnkey basis to renovation of already existing website we use latest web developing tools and technologies 
-                        to make sure you will get fast, reliable, responsive website optimized for search engines. 
-                    </span>
-                    <br></br>
-                    <span>
-                        Your customers want to find and do business with your organization completely online, 
-                        so bringing your business online isn’t a choice — it’s a necessity. The more value you are able to provide 
-                        through digital channels, the higher the chances that you will remain relevant to your customers.
-                        We help businesses invent and develop new digital products as well as streamline existing customer-facing 
-                        online services, by researching the market, developing delightful and valuable user experiences, 
-                        and engineering highly efficient web-and-mobile-native systems. 
-                        We make sure you outstand from competitors with uniq design and user-friendly interface.
-                    </span>
+                    <p>Your customers want to find and do business with your organization completely online,
+                        so bringing your business online isn’t a choice — it’s a necessity. The more value you are able
+                        to provide through digital channels, the higher chances that you will remain relevant to your
+                        customers. We help businesses invent and develop new digital products as well as streamline
+                        existing customer-facing online services, by researching the market, developing delightful
+                        and valuable user experiences, and engineering highly efficient web-and-mobile-native systems.
+                        We make sure you outstand from competitors with unique design and user-friendly interface. </p>
 
                     <div class="list_1">
-                        <h6>Our websites it's always complex approach:</h6>
+                        <h4 class="headerStyle"> Our Websites - It's Always Complex Approach </h4>
                         <ul>
-                            <li> "Landing pages" </li>
-                            <li> "Business card websites" </li>
-                            <li> "Portfolios" </li>
-                            <li> "Magazine websites" </li>
-                            <li> "eCommerce websites" </li>
-                            <li> "Educational websites" </li>
-                            <li> "Blogs" </li>
-                            <li> "Individual solutions of any complexity" </li>
+                            <li> Landing pages </li>
+                            <li> Business card websites </li>
+                            <li> Portfolios </li>
+                            <li> Magazine websites </li>
+                            <li> eCommerce websites </li>
+                            <li> Educational websites </li>
+                            <li> Blogs </li>
+                            <li> Individual solutions of any complexity </li>
                         </ul>
                     </div>
                 </div>
@@ -166,20 +162,36 @@
 
         <div class="slideshow-container">
 
+            <div class="reviewHeader">What People Say About Us</div>
+
             <div class="mySlides">
-                <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-                <p class="author">- John Keats</p>
+                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
+                    company.</q>
+                <p class="author">Thomas</p>
             </div>
 
             <div class="mySlides">
-                <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-                <p class="author">- Ernest Hemingway</p>
+                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
+                    experience to
+                    a whole new level that you simply can't teach. The feedback from my customers are just as
+                    astonished!
+                    Thank you again, I know I definitely made the right choice!</q>
+                <p class="author">Timothy Collier</p>
             </div>
 
             <div class="mySlides">
-                <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-                <p class="author">- Thomas A. Edison</p>
+                <q>Professional and efficient. They did an excellent work redesigning my website with very tight
+                    deadline.
+                    Individual customer approach and post sale service.</q>
+                <p class="author">Justin</p>
             </div>
+
+            <div class="mySlides">
+                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
+                    needs.</q>
+                <p class="author">Alison Fagin</p>
+            </div>
+
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -190,6 +202,7 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
         </div>
 
 
@@ -205,23 +218,23 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
-                        <p style="font-size: 14pt"> 2080 King St., Toronto,<br> Ontario, Canada</p>
+                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">example@example.com</a>
+                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 111 111 111 111 <br> Fax: 222 222 222 222</p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
