--- a/Services/Web_design.html
+++ b/Services/Web_design.html
@@ -28,7 +28,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/cloud-256x256.png">
-    <link rel="stylesheet" href="../css/web_design_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Web Design</title>
 </head>
 
@@ -66,8 +67,8 @@
                 <li><a href="../Works.html">Works</a></li>
                 <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
                 <li class="phone_navbar">
-                    <span class="phone_highlight"> +1-111</span>
-                    <span>-111-1111 </span>
+                    <span class="phone_highlight"> +1-647</span>
+                    <span>-676-3661 </span>
                 </li>
             </ul>
             </nav>
@@ -77,7 +78,7 @@
         <div class="company_logo">
             <img src='../img/cloud-256x256.png' width=50px />
         </div>
-        <!-- <div class="company_name">BlackCloud</div> -->
+        <div class="company_name">iDigital Web Studio</div>
 
 
         <!-- Breadcrumbs -->
@@ -102,39 +103,28 @@
         <!-- Block_1 -->
 
         <div class="block_1_row">
-            <div class="block_1_column_1">
-                <div class="block_1_header">
-                    <h6>It's Not Just Design - It's the Face of Your Company.</h6>
-                </div>
-                <div class="block_1_text">
-                    <span>
-                        Presence of the company in the Internet through website is an essential condition to attract new
-                        customers but..
-                        it's not enough. Positive result and gain of audience is usually achieved due to how beautiful
-                        and user friendly
-                        it is. iDigital Studio can help you with it! Our team of professional designers will create you
-                        uniq design
-                        which will grab you customer's attention at the first look. We use latest design tools and
-                        techniques following
-                        your requirements until you are completely satisfied.
-                    </span>
-                    <br></br>
-                    <span>
-                        A comprehensive understanding of the functional, personal and business goals of your customers -
-                        creating a user experience that resolves them elegantly, leaving your customers satisfied not
-                        only with
-                        the results they expected but even with some that they didn’t - is the key to developing winning
-                        products.
-                        We will help you research, prototype and design a product that will be valuable for its users
-                        and highly
-                        effective for your business to make sure uou not only attract your customers but also pass on
-                        the message conveniently.
-                    </span>
-                </div>
-            </div>
+
             <div class="block_1_column_2">
                 <div class="block_1_image">
                     <img src='../img/img_313.jpg' width=100% />
+                </div>
+            </div>
+
+            <div class="block_1_column_1">
+                <div class="block_1_header">
+                    <h4> It's Not Just Design - It's the Face of Your Company </h4>
+                </div>
+
+                <div class="block_1_text">
+                    <p> Presence of the company in the Internet through website is an essential condition to attract new
+                        customers but... it's not enough. Positive result and gain of audience is usually achieved due
+                        to how beautiful and user friendly it is. iDigital Studio can help you with it! Our team of
+                        professional designers will create you unique design which will grab you customer's attention
+                        at the first look. We use latest design tools and techniques following
+                        your requirements until you are completely satisfied. </p>
+
+                    <p> A comprehensive understanding of the functional, personal and business goals of your customers -
+                        creating a user experience that resolves them elegantly. </p>
                 </div>
             </div>
         </div>
@@ -142,30 +132,28 @@
         <div class="block_1_row">
             <div class="block_1_column_3">
                 <div class="block_1_text">
-                    <span>
-                        We operate effectively and successfully on any level of immersion to the business environment
-                        both
-                        at the executive level and at the level of discretionary management of the projects.
+                    <p> Leaving your customers satisfied not
+                        only with the results they expected but even with some that they didn’t - is the key to
+                        developing winning products. We will help you research, prototype and design a product
+                        that will be valuable for its users and highly effective for your business to make sure
+                        you not only attract your customers but also pass on the message conveniently. </p>
+
+                    <p> We operate effectively and successfully on any level of immersion to the business environment
+                        both at the executive level and at the level of discretionary management of the projects.
                         We are always ready to offer optimal model of cooperation in every specific situation.
                         We prepare text, graphic and multimedia content that makes the visitor stay on the website
                         and which reveals unique features of the brand, it deepens the impression and intensifies the
-                        impact,
-                        convinces and sells.
-                    </span>
-                    <br></br>
-                    <span>
-                        We write scripts and produce promotional videos.
-                    </span>
+                        impact, convinces and sells. Also we write scripts and produce promotional videos.</p>
 
                     <div class="list_1">
-                        <h6>We Use Modern Design and Technology for:</h6>
+                        <h4 class="headerStyle"> iDigital Use Modern Design and Technology for: </h4>
                         <ul>
-                            <li> "Interface Design" </li>
-                            <li> "Logo Design" </li>
-                            <li> "Banners" </li>
-                            <li> "Promotional Videos" </li>
-                            <li> "Infographics" </li>
-                            <li> "Individual solutions of any complexity" </li>
+                            <li> Interface Design </li>
+                            <li> Logo Design </li>
+                            <li> Banners </li>
+                            <li> Promotional Videos </li>
+                            <li> Infographics </li>
+                            <li> Individual solutions of any complexity </li>
                         </ul>
                     </div>
                 </div>
@@ -173,24 +161,41 @@
         </div>
 
 
+
         <!-- Block_2 -->
 
         <div class="slideshow-container">
 
+            <div class="reviewHeader">What People Say About Us</div>
+
             <div class="mySlides">
-                <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-                <p class="author">- John Keats</p>
+                <q>iDigital Web Studio delivered a functional, mobile-friendly site that has me significantly expand my
+                    company.</q>
+                <p class="author">Thomas</p>
             </div>
 
             <div class="mySlides">
-                <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-                <p class="author">- Ernest Hemingway</p>
+                <q>This is AMAZING!!! I am stunned on the job that their team did for my website! They bring personal
+                    experience to
+                    a whole new level that you simply can't teach. The feedback from my customers are just as
+                    astonished!
+                    Thank you again, I know I definitely made the right choice!</q>
+                <p class="author">Timothy Collier</p>
             </div>
 
             <div class="mySlides">
-                <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-                <p class="author">- Thomas A. Edison</p>
+                <q>Professional and efficient. They did an excellent work redesigning my website with very tight
+                    deadline.
+                    Individual customer approach and post sale service.</q>
+                <p class="author">Justin</p>
             </div>
+
+            <div class="mySlides">
+                <q>Excellent service! I would highly recommend iDigital Studio for all your logo and other design
+                    needs.</q>
+                <p class="author">Alison Fagin</p>
+            </div>
+
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
@@ -201,6 +206,7 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
         </div>
 
 
@@ -216,23 +222,23 @@
                     <div class="footerColumn">
                     </div>
                     <div class="footerColumn">
-                        <div class="footer_icon_wrap">
+                        <div class="footer_icon_wrap icon1">
                             <img src='../img/icons/dark_icon_1.png'>
                         </div>
-                        <p style="font-size: 14pt"> 2080 King St., Toronto,<br> Ontario, Canada</p>
+                        <p style="font-size: 14pt"> 2 Valhalla Inn Rd., Toronto,<br> Ontario, Canada</p>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_2.png'>
                         </div>
                         <a class="email-text" style="font-size: 14pt"
-                            href="mailto:example@example.com">example@example.com</a>
+                            href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                     </div>
                     <div class="footerColumn">
                         <div class="footer_icon_wrap">
                             <img src='../img/icons/dark_icon_3.png'>
                         </div>
-                        <p style="font-size: 14pt"> Phone: 111 111 111 111 <br> Fax: 222 222 222 222</p>
+                        <p class="phoneFoot" style="font-size: 14pt"> Phone: +1-647-676-3661 </p>
                     </div>
                     <div class="footerColumn">
                     </div>
