--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <!--===============================================================================================-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <title>BlackCloud</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <title>BlackCloud</title>
 </head>
 
 <body>
